# dump

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  readme  result.json  single.json  vote.json
sample_topics/: artist.json  democracy.json
src/: handlers.rs  ipfs.rs  main.rs  model.rs  redis_object.rs  redis_util.rs
