[package]
name = "dump"
version = "0.1.0"
authors = ["Yasushi Sakai <yasushisakai+git@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-cors = "0.5.4"
actix-redis = "0.9.1"
actix-web = "3.3.2"
bs58 = "0.4.0"
dotenv = "0.15.0"
env_logger = "0.8.3"
futures = "0.3.13"
log = "0.4.14"
redis-async = "0.6.3"
serde = "1.0.123"
serde_json = "1.0.63"
sha2 = "0.9.5"
uuid = "0.8.2"
# vote = {path="../vote"}
vote={git="https://github.com/makuhari-city/vote", rev="88451b110c6aba34b0ade8ffda81c6e755d441ae"}

